[package]
name = "uao-rs"
version = "0.1.0"
authors = ["zenix <hansheng.huang@sbibits.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zenixls2/uao-rs"
homepage = "https://github.com/zenixls2/uao-rs"
documentation = "https://docs.rs/uao-rs"
description = "big5 uao encoder/decoder"
keywords = ["big5", "uao", "encoder", "decoder"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[badges]
travis-ci = { repository = "zenixls2/uao-rs" }
